<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, Map!</string>
    <string name="app_name">WalkyScotty</string>



	<!-- Info Pages -->
    <string name="BakerHall">Baker Hall</string>
    <string name="BakerDes">Baker Hall was one of the first buildings built on campus. It is structure is very unique
							in that it is connected to Porter Hall and it is sloped. It is one of the largest and most
							noticeable buildings on campus, created by the first dean of the College of Fine Arts(CFA), Henry Hornbostel.
							Baker Hall is home to College of Humanities and Social Sciences (HSS), which is the second largest
							school on campus with more than 60 majors and minors offered. </string>
    <string name="directions_btn">Directions</string>
    <string name="rooms_btn">Rooms</string>
    <string name="nearby_btn">Nearby</string>
    
    <!-- Nearby Page -->
	<string name="WhatNearby">What\'s Nearby</string>
	<string name="Help">Help</string>
	<string name="Map">Map</string>
	<string name="map_fuction">Map screen is the main screen of Walky Scotty. It shows a whole map of Carnegie Mellon campus. It can be accessed by a button at the bottom that resembles a map.</string>
	<string name="Directions">Directions</string>
	<string name="directions_function">Directions feature allows users to type in places they want to find routes between. Users have to click on a compass button at the bottom of the screen to go to Directions page.</string>
	<string name="Search">Search</string>
	<string name="search_function">Search feature allows users to perform two tasks. Users can either type in a place of their interest into the search box for quick search. Also, they can browse through different categories.</string>
	<string name="FoodHoursTitle">Hours</string>
	<string name="BakerHallDetailsText">Details</string>
	<string name="directions_list_steps_text">Steps</string>
	<string name="crumb_restaurants">Restaurants</string>
	<string name="info_alternative_name">ALSO KNOWN AS</string>
	<string name="food_menu_title">MENU</string>
	<string name="escorts_stops_title">STOPS</string>
	<string name="crumb_escorts">Escorts</string>
	<string name="crumbs_shuttles">Shuttles</string>
	<string name="crumbs_rooms">Rooms</string>
	<string name="crumbs_others">Others</string>
	<string name="buildings_rooms_text">ROOMS</string>
	<string name="buildings_all_rooms"><u>all rooms</u></string>
	<string name="rooms_building_title">BUILDING</string>
    
</resources>
