<?xml version="1.0" encoding="utf-8"?>

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:orientation="vertical">
	
		<LinearLayout style="@style/breadcrumbLL">
	  		<TextView style="@style/breadcrumbMapText" />
	  		<TextView style="@style/breadcrumbArrow" />
	  		<TextView style="@style/breadcrumbBuildingsText" />
	  		<TextView style="@style/breadcrumbArrow" />
	  		<TextView style="@style/breadcrumbText" android:id="@+id/bakerinfo_breadcrumb_building" />
	  	</LinearLayout>
	  	
		<TextView android:id="@+id/BakerHallText" style="@style/title" />
	
		<ImageView android:id="@+id/BakerHallPhoto"
			android:layout_width="wrap_content" android:layout_height="wrap_content" />
	
		<TextView android:id="@+id/BakerHallDetailsText" style="@style/subtitle" android:text="@string/BakerHallDetailsText"/>
		<ScrollView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_weight="1">
	
			<TextView android:id="@+id/BakerHallDes" style="@style/description"
				android:layout_width="fill_parent" android:layout_height="wrap_content" />
	
		</ScrollView>
		<LinearLayout style="@style/myLLayout_Buttons">
		<Button android:id="@+id/BakerHall_Direction_Button"
			android:text="@string/directions_btn" style="@style/myButton" />
		<Button android:id="@+id/BakerHall_Rooms_Button" android:text="@string/rooms_btn"
			style="@style/myButton" />
		<Button android:id="@+id/BakerHall_Nearby_Button" android:text="@string/nearby_btn"
			style="@style/myButton" />
	</LinearLayout>
	</LinearLayout>
	

